# Principia-test

./: .env.example  .gitignore  README-old.md  README.md  principia.py  principia_v1_1_github_cloud_design_proposal.md  principia_v1_design_proposal.md  requirements.txt  v1.3-tutorial.ipynb
.github/workflows/: principia-cloud-compact.yml  principia-cloud-crawl.yml  principia-cloud-release.yml  principia-cloud-validate.yml
Principia-v1.3/: LICENSE  README.md  pyproject.toml
Principia-v1.3/docs/: api.md  publishing.md
Principia-v1.3/examples/: README.md  principia_v13_tutorial.ipynb
Principia-v1.3/src/principia/: __init__.py  _llm_progress.py  cli.py  features.py  ideas.py  ids.py  llm.py  models.py  progress.py  research.py  run.py  storage.py  workspace.py
Principia-v1.3/tests/: test_cli_notebook.py  test_ids_storage.py  test_research_ideas.py
cloud/contributions/: CONTRIB-C029BC92C7A2.json
cloud/examples/: admin_operation.example.json  contribution.example.json
cloud/manifests/: latest.json
cloud/schema/: cloud_admin_operation.schema.json  cloud_concept_record.schema.json  cloud_contribution.schema.json  cloud_manifest.schema.json  cloud_relation_record.schema.json  cloud_work_record.schema.json
legacy/v0-demo-jun8-v2/: .env.example  .gitignore
legacy/v1.0/: .env.example  .gitignore  README.md
principia/: arxiv.py  cli.py  concept_canonicalizer.py  concept_extractor.py  config.py  derivation_verifier.py  engine.py  extraction_scheduler.py  global_store.py  identity_resolver.py  lineage_graph.py  research_sources.py  schema.py  server.py  storage.py  symbol_registry.py  symbolic_ideator.py  utils.py  work_versioning.py
principia/cloud/: __init__.py  admin_ops.py  auth.py  cache.py  compactor.py  compression.py  contribution.py  crawler.py  github_client.py  hydrate.py  ids.py  manifest.py  pack.py  resolver.py  (+4 more)
static/: app.js  cloud.css  cloud.html  cloud.js  idea.html  idea.js  index.html  item.html  item.js  styles.css
tests/: test_cloud_v1_1.py  test_principia_v1.py
(+42 files in other folders)
