[build-system]
requires = ["hatchling>=1.25"]
build-backend = "hatchling.build"

[project]
name = "principia-ai"
version = "1.3.2"
description = "Local-first research framework for evidence-grounded idea generation."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
license-files = ["LICENSE"]
authors = [
  { name = "Principia Contributors" }
]
keywords = ["research", "ideation", "literature", "llm", "sqlite"]
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Science/Research",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
  "httpx>=0.27",
  "platformdirs>=4.2",
  "pydantic>=2.7",
  "pypdf>=4.2",
  "rich>=13.7",
  "typing_extensions>=4.11",
]

[project.optional-dependencies]
dev = [
  "build>=1.2",
  "ipykernel>=6.29",
  "mypy>=1.10",
  "nbclient>=0.10",
  "pytest>=8.2",
  "ruff>=0.5",
  "twine>=5.1",
]

[project.urls]
Homepage = "https://github.com/pzqpzq/Principia"
Repository = "https://github.com/pzqpzq/Principia"
Documentation = "https://github.com/pzqpzq/Principia"

[project.scripts]
principia = "principia.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/principia"]

[tool.hatch.build.targets.sdist]
include = [
  "/src",
  "/tests",
  "/docs",
  "/examples",
  "/README.md",
  "/LICENSE",
  "/pyproject.toml",
]
exclude = [
  "**/.DS_Store",
  "**/.principia",
  "**/principia_outputs",
  "**/.venv",
  "/dist",
  "/build",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
ignore = ["E501"]
